--- a/connections/Assets/customer.css
+++ b/connections/Assets/customer.css
@@ -109,7 +109,16 @@ body {
   color: white;
 }
 
-
+.cart-count {
+  background: #d32f2f;
+  color: #fff;
+  border-radius: 50%;
+  padding: 2px 6px;
+  font-size: 14px;
+  position: relative;
+  top: -50px;
+  right: -15px;
+}
 
 .icon-list {
   list-style: none; 
@@ -236,9 +245,19 @@ header input {
   margin-top: auto;
 }
 
-.rent-btn{
-
+.remove-item-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px; 
+  color: #2d1d1d; 
+  
 }
+
 .order-summary {
   width: 300px;
   background-color: #F6EEE0;
