--- a/products/assets/cart.css
+++ b/products/assets/cart.css
@@ -126,6 +126,60 @@ td {
   text-decoration: underline;
 }
 
+
+.place-order {
+  padding: 10px 20px;
+  background-color: #2d1d1d;
+  color: white;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+
+.place-order:hover {
+  background-color: #4b2d2d;
+}
+
+.place-order:active {
+  background-color: #1d1212;
+}
+
+.cart-header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  background-color: #2d1d1d;
+  padding: 10px 20px;
+  box-sizing: border-box;
+}
+
+h1 {
+  margin: 0;
+  flex-grow: 1;
+  text-align: center;
+  color: white;
+}
+
+.btn-back-dashboard {
+  text-decoration: none;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 5px;
+  font-size: 30px;
+  transition: background-color 0.3s ease;
+  margin-right: 20px;
+}
+
+.btn-back-dashboard:hover {
+  color: #0056b3;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
   table {
